--- a/snique/snique-Info.plist
+++ b/snique/snique-Info.plist
@@ -8,6 +8,25 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>icon-ipad@2x.png</string>
+				<string>icon-iphone@2x.png</string>
+				<string>icon-ipad-spotlight@2x.png</string>
+				<string>icon-iphone-spotlight@2x.png</string>
+				<string>icon-ipad.png</string>
+				<string>icon-iphone.png</string>
+				<string>icon-ipad-spotlight.png</string>
+				<string>icon-iphone-spotlight.png</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.strawberrycat.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
