--- a/snique/snique-Info.plist
+++ b/snique/snique-Info.plist
@@ -45,6 +45,8 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>MainiPhone</string>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>MainStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
